added the content for the navbar

--- a/ecommerce-product-page-main/index.html
+++ b/ecommerce-product-page-main/index.html
@@ -15,12 +15,19 @@
   </style>
 </head>
 <body>
-
-  Collections
-  Men
-  Women
-  About
-  Contact
+   
+  <header>
+    <h1>sneakers</h1>
+    <ul>
+      <li><a href="#">Collections</a></li>
+      <li><a href="#">Men</a></li>
+      <li><a href="#">Women</a></li>
+      <li><a href="#">About</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+    <img src="./images/icon-cart.svg" alt="a shopping cart icon">
+    <img src="./images/image-avatar.png" alt="an image of an avatar" height="40px" width="40px">
+  </header>
 
   Sneaker Company
 
